RESOLVED FIXED17676
REGRESSION (r30240-r30267): href attribute values with non-ASCII characters in the host part do not work
https://bugs.webkit.org/show_bug.cgi?id=17676
Summary REGRESSION (r30240-r30267): href attribute values with non-ASCII characters i...
mitz
Reported 2008-03-04 17:06:38 PST
URLs in href attributes that contain non-ASCII characters in the host part (such as needed for IDN) are not parsed correctly. Steps to reproduce: Open the URL and click the link (or watch the Safari Status Bar text when hovering over the link). Most likely caused by the KURL changes, <http://trac.webkit.org/projects/webkit/changeset/30243>.
Attachments
mitz
Comment 1 2008-03-04 17:07:27 PST
mitz
Comment 2 2008-03-04 18:10:10 PST
Note You need to log in before you can comment on or make changes to this bug.