WebCore:

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17676
          <rdar://problem/5781091> REGRESSION (r30240-r30267): href attribute values with non-ASCII characters in the host part do not work

        Test: fast/encoding/url-host-name-non-ascii.html

        * platform/KURL.cpp:
        (WebCore::appendEncodedHostname): Added an early return in the all-ASCII
        case to avoid copying the host name twice and corrected the error
        checking after calling uidna_IDNToASCII().

LayoutTests:

        - test for http://bugs.webkit.org/show_bug.cgi?id=17676
          <rdar://problem/5781091> REGRESSION (r30240-r30267): href attribute values with non-ASCII characters in the host part do not work

        * fast/encoding/url-host-name-non-ascii-expected.txt: Added.
        * fast/encoding/url-host-name-non-ascii.html: Added.



Canonical link: https://commits.webkit.org/24469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30781 268f45cc-cd09-0410-ab3c-d52691b4dbfc