WebCore/platform/KURL.cpp
@@ -1324,15 +1324,17 @@ static void appendEncodedHostname(UCharBuffer& buffer, const UChar* str, unsigne
     // For host names bigger than this, we won't do IDN encoding, which is almost certainly OK.
     const unsigned hostnameBufferLength = 2048;
 
-    if (strLen > hostnameBufferLength || charactersAreAllASCII(str, strLen))
+    if (strLen > hostnameBufferLength || charactersAreAllASCII(str, strLen)) {
         buffer.append(str, strLen);
+        return;
+    }
 
 #if USE(ICU_UNICODE)
     UChar hostnameBuffer[hostnameBufferLength];
     UErrorCode error = U_ZERO_ERROR;
     int32_t numCharactersConverted = uidna_IDNToASCII(str, strLen, hostnameBuffer,
         hostnameBufferLength, UIDNA_ALLOW_UNASSIGNED, 0, &error);
-    if (error != U_ZERO_ERROR)
+    if (error == U_ZERO_ERROR)
         buffer.append(hostnameBuffer, numCharactersConverted);
 #elif USE(QT4_UNICODE)
     QByteArray result = QUrl::toAce(String(str, strLen));
